Associate actual response headers and undecoded size with streams

Bug: 763700
Change-Id: I8493bbe464cd9a81a0864e5bcc9afd8b19aea3c5