net/url_request/url_request_job.h
@@ -207,7 +207,7 @@ class NET_EXPORT URLRequestJob : public base::PowerObserver {
 
   // The number of bytes read before passing to the filter. This value reflects
   // bytes read even when there is no filter.
-  int64_t prefilter_bytes_read() const { return prefilter_bytes_read_; }
+  virtual int64_t prefilter_bytes_read() const;
 
   // These methods are not applicable to all connections.
   virtual bool GetMimeType(std::string* mime_type) const;
